--- a/bb-commerce/package.json
+++ b/bb-commerce/package.json
@@ -11,10 +11,12 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
     "express": "^4.16.3",
-    "@nuxtjs/axios": "^5.0.0"
+    "nuxt": "^2.0.0",
+    "vee-validate": "^2.1.0-beta.11",
+    "vue-awesome-swiper": "^3.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
