首页登录注册

--- a/bb-commerce/package.json
+++ b/bb-commerce/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "better-scroll": "^1.13.2",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "nuxt": "^2.0.0",
